@@ -1,24 +1,25 @@
 # Reference
+
 <!-- DO NOT EDIT: This document was generated by Puppet Strings -->
 
 ## Table of Contents
 
-**Classes**
+### Classes
 
 * [`logrotate`](#logrotate): Configure LogRotate global options  Use ``logrotate::rule`` for specific configuration options.
 
-**Defined types**
+### Defined types
 
 * [`logrotate::rule`](#logrotaterule): Add a LogRotate Configuration  If options have a 'no' variant, then the no variant will be set if you set the primary value to false  The ``l
 
-**Data types**
+### Data types
 
 * [`Logrotate::Periods`](#logrotateperiods): Allowed time intervals for logrotate
 * [`Logrotate::Size`](#logrotatesize): Size of a log in bytes, kilobytes, megabytes or gigabytes
 
 ## Classes
 
-### logrotate
+### <a name="logrotate"></a>`logrotate`
 
 Configure LogRotate global options
 
@@ -26,50 +27,65 @@ Use ``logrotate::rule`` for specific configuration options.
 
 #### Parameters
 
-The following parameters are available in the `logrotate` class.
+The following parameters are available in the `logrotate` class:
 
-##### `rotate_period`
+* [`rotate_period`](#rotate_period)
+* [`rotate`](#rotate)
+* [`create`](#create)
+* [`compress`](#compress)
+* [`configdir`](#configdir)
+* [`include_dirs`](#include_dirs)
+* [`manage_wtmp`](#manage_wtmp)
+* [`dateext`](#dateext)
+* [`dateformat`](#dateformat)
+* [`dateyesterday`](#dateyesterday)
+* [`maxsize`](#maxsize)
+* [`minsize`](#minsize)
+* [`package_ensure`](#package_ensure)
+* [`logger_service`](#logger_service)
+
+##### <a name="rotate_period"></a>`rotate_period`
 
 Data type: `Logrotate::Periods`
 
 How often to rotate the logs
 
-Default value: 'weekly'
+Default value: `'weekly'`
 
-##### `rotate`
+##### <a name="rotate"></a>`rotate`
 
 Data type: `Integer[0]`
 
 The number of times to rotate the logs before removing them from the
 system
 
-Default value: 4
+Default value: `4`
 
-##### `create`
+##### <a name="create"></a>`create`
 
 Data type: `Boolean`
 
 Create new log files if they do not exist
 
-Default value: `true`
+Default value: ``true``
 
-##### `compress`
+##### <a name="compress"></a>`compress`
 
 Data type: `Boolean`
 
 Compress the logs upon rotation
 
-Default value: `true`
+Default value: ``true``
 
-##### `configdir`
+##### <a name="configdir"></a>`configdir`
 
 Data type: `Stdlib::Absolutepath`
 
 The primary directory for SIMP-managed configuration files.
 
-Default value: '/etc/logrotate.simp.d'
+Default value: `'/etc/logrotate.simp.d'`
 
-##### `include_dirs`
+##### <a name="include_dirs"></a>`include_dirs`
 
 Data type: `Array[Stdlib::Absolutepath]`
 
@@ -79,26 +95,26 @@ Directories to include in your logrotate configuration
 * Be sure to include ``/etc/logrotate.d`` in this list if you
   override the default.
 
-Default value: [ '/etc/logrotate.d' ]
+Default value: `[ '/etc/logrotate.d' ]`
 
-##### `manage_wtmp`
+##### <a name="manage_wtmp"></a>`manage_wtmp`
 
 Data type: `Boolean`
 
 Set to ``false`` if you do not want ``/var/log/wtmp`` to be managed by
 logrotate
 
-Default value: `true`
+Default value: ``true``
 
-##### `dateext`
+##### <a name="dateext"></a>`dateext`
 
 Data type: `Boolean`
 
 Use ``dateext`` as the suffix for rotated files
 
-Default value: `true`
+Default value: ``true``
 
-##### `dateformat`
+##### <a name="dateformat"></a>`dateformat`
 
 Data type: `String[1]`
 
@@ -106,25 +122,25 @@ The format of the date to be appended
 
 * Leaving as is allows for multiple rotations per day
 
-Default value: '-%Y%m%d.%s'
+Default value: `'-%Y%m%d.%s'`
 
-##### `dateyesterday`
+##### <a name="dateyesterday"></a>`dateyesterday`
 
 Data type: `Optional[Boolean]`
 
 Say 'yesterday' instead of the date
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `maxsize`
+##### <a name="maxsize"></a>`maxsize`
 
 Data type: `Optional[Logrotate::Size]`
 
 The default maximum size of a logfile
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `minsize`
+##### <a name="minsize"></a>`minsize`
 
 Data type: `Optional[Logrotate::Size]`
 
@@ -132,17 +148,17 @@ The default minimum size of a logfile
 
 * Overrides the ``maxsize`` setting
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `package_ensure`
+##### <a name="package_ensure"></a>`package_ensure`
 
 Data type: `String[1]`
 
 The ensure status of packages to be installed
 
-Default value: simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })
+Default value: `simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })`
 
-##### `logger_service`
+##### <a name="logger_service"></a>`logger_service`
 
 Data type: `String[1]`
 
@@ -152,11 +168,11 @@ The service that controls system logging
   service to be restarted if, and only if, the default lastaction is
   enabled.
 
-Default value: 'rsyslog'
+Default value: `'rsyslog'`
 
 ## Defined types
 
-### logrotate::rule
+### <a name="logrotaterule"></a>`logrotate::rule`
 
 Add a LogRotate Configuration
 
@@ -167,97 +183,139 @@ The ``logrotate(5)`` man page should be referenced for any undocumented
 parameter.
 
 * **See also**
-logrotate(5)
+  * logrotate(5)
 
 #### Parameters
 
-The following parameters are available in the `logrotate::rule` defined type.
+The following parameters are available in the `logrotate::rule` defined type:
 
-##### `name`
+* [`name`](#name)
+* [`log_files`](#log_files)
+* [`compress`](#compress)
+* [`compresscmd`](#compresscmd)
+* [`uncompresscmd`](#uncompresscmd)
+* [`compressext`](#compressext)
+* [`compressoptions`](#compressoptions)
+* [`copy`](#copy)
+* [`copytruncate`](#copytruncate)
+* [`create`](#create)
+* [`rotate_period`](#rotate_period)
+* [`dateext`](#dateext)
+* [`dateformat`](#dateformat)
+* [`dateyesterday`](#dateyesterday)
+* [`delaycompress`](#delaycompress)
+* [`extension`](#extension)
+* [`ifempty`](#ifempty)
+* [`ext_include`](#ext_include)
+* [`mail`](#mail)
+* [`maillast`](#maillast)
+* [`maxage`](#maxage)
+* [`maxsize`](#maxsize)
+* [`minsize`](#minsize)
+* [`missingok`](#missingok)
+* [`olddir`](#olddir)
+* [`postrotate`](#postrotate)
+* [`prerotate`](#prerotate)
+* [`firstaction`](#firstaction)
+* [`lastaction`](#lastaction)
+* [`lastaction_restart_logger`](#lastaction_restart_logger)
+* [`logger_service`](#logger_service)
+* [`rotate`](#rotate)
+* [`size`](#size)
+* [`sharedscripts`](#sharedscripts)
+* [`shred`](#shred)
+* [`shredcycles`](#shredcycles)
+* [`start`](#start)
+* [`su`](#su)
+* [`su_user`](#su_user)
+* [`su_group`](#su_group)
+* [`tabooext`](#tabooext)
+
+##### <a name="name"></a>`name`
 
 Data type: `String`
 
 Directly translates to the name of the file
 
-##### `log_files`
+##### <a name="log_files"></a>`log_files`
 
 Data type: `Array[String[1]]`
 
 The log file strings for all logs to be affected by this stanza
 
-##### `compress`
+##### <a name="compress"></a>`compress`
 
 Data type: `Optional[Boolean]`
 
 If undefined it defaults to the setting in logrotate.
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `compresscmd`
-
-Data type: `Optional[String[1]]`
-
-
-
-Default value: `undef`
-
-##### `uncompresscmd`
+##### <a name="compresscmd"></a>`compresscmd`
 
 Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `compressext`
-
-Data type: `Optional[String[1]]`
-
-
-
-Default value: `undef`
-
-##### `compressoptions`
+##### <a name="uncompresscmd"></a>`uncompresscmd`
 
 Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `copy`
+##### <a name="compressext"></a>`compressext`
+
+Data type: `Optional[String[1]]`
+
+
+
+Default value: ``undef``
+
+##### <a name="compressoptions"></a>`compressoptions`
+
+Data type: `Optional[String[1]]`
+
+
+
+Default value: ``undef``
+
+##### <a name="copy"></a>`copy`
 
 Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
-##### `copytruncate`
+##### <a name="copytruncate"></a>`copytruncate`
 
 Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
-##### `create`
+##### <a name="create"></a>`create`
 
 Data type: `Pattern['\d{4} .+ .+']`
 
 
 
-Default value: '0640 root root'
+Default value: `'0640 root root'`
 
-##### `rotate_period`
+##### <a name="rotate_period"></a>`rotate_period`
 
 Data type: `Optional[Logrotate::Periods]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `dateext`
+##### <a name="dateext"></a>`dateext`
 
 Data type: `Optional[Boolean]`
 
@@ -265,146 +323,146 @@ If set to true log files will be rotated using a date extension.
 If false nodateext is set and rotated logs use a number extension.
 If undefined it defaults to the setting in logrotate
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `dateformat`
+##### <a name="dateformat"></a>`dateformat`
 
 Data type: `String[1]`
 
 
 
-Default value: '-%Y%m%d.%s'
+Default value: `'-%Y%m%d.%s'`
 
-##### `dateyesterday`
-
-Data type: `Optional[Boolean]`
-
-
-
-Default value: `undef`
-
-##### `delaycompress`
+##### <a name="dateyesterday"></a>`dateyesterday`
 
 Data type: `Optional[Boolean]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `extension`
+##### <a name="delaycompress"></a>`delaycompress`
+
+Data type: `Optional[Boolean]`
+
+
+
+Default value: ``undef``
+
+##### <a name="extension"></a>`extension`
 
 Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `ifempty`
+##### <a name="ifempty"></a>`ifempty`
 
 Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
-##### `ext_include`
+##### <a name="ext_include"></a>`ext_include`
 
 Data type: `Optional[Array[String[1]]]`
 
 Corresponds to the ``include`` logrotate configuration since it is a
 reserved word in Puppet
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `mail`
+##### <a name="mail"></a>`mail`
 
 Data type: `Optional[Simplib::EmailAddress]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `maillast`
+##### <a name="maillast"></a>`maillast`
 
 Data type: `Boolean`
 
 If false, mailfirst will be set. Ignored if $mail is `false`
 
-Default value: `true`
+Default value: ``true``
 
-##### `maxage`
+##### <a name="maxage"></a>`maxage`
 
 Data type: `Optional[Integer[0]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `maxsize`
-
-Data type: `Optional[Logrotate::Size]`
-
-
-
-Default value: `undef`
-
-##### `minsize`
+##### <a name="maxsize"></a>`maxsize`
 
 Data type: `Optional[Logrotate::Size]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `missingok`
+##### <a name="minsize"></a>`minsize`
+
+Data type: `Optional[Logrotate::Size]`
+
+
+
+Default value: ``undef``
+
+##### <a name="missingok"></a>`missingok`
 
 Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
-##### `olddir`
+##### <a name="olddir"></a>`olddir`
 
 Data type: `Optional[Stdlib::Absolutepath]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `postrotate`
-
-Data type: `Optional[String[1]]`
-
-
-
-Default value: `undef`
-
-##### `prerotate`
+##### <a name="postrotate"></a>`postrotate`
 
 Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `firstaction`
-
-Data type: `Optional[String[1]]`
-
-
-
-Default value: `undef`
-
-##### `lastaction`
+##### <a name="prerotate"></a>`prerotate`
 
 Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `lastaction_restart_logger`
+##### <a name="firstaction"></a>`firstaction`
+
+Data type: `Optional[String[1]]`
+
+
+
+Default value: ``undef``
+
+##### <a name="lastaction"></a>`lastaction`
+
+Data type: `Optional[String[1]]`
+
+
+
+Default value: ``undef``
+
+##### <a name="lastaction_restart_logger"></a>`lastaction_restart_logger`
 
 Data type: `Boolean`
 
@@ -412,9 +470,9 @@ Restart ``$logger_service`` as a logrotate ``lastaction``
 
 * Has no effect if ``$lastaction`` is set
 
-Default value: `false`
+Default value: ``false``
 
-##### `logger_service`
+##### <a name="logger_service"></a>`logger_service`
 
 Data type: `Optional[String[1]]`
 
@@ -423,101 +481,109 @@ The name of the service which will be restarted as a logrotate ``lastaction``
 * NOTE: This will default to ``rsyslog`` unless otherwise specified either
   in the call to the define or as ``logrotate::logger_service``
 
-Default value: simplib::lookup('logrotate::logger_service', {'default_value' => 'rsyslog'})
+Default value: `simplib::lookup('logrotate::logger_service', {'default_value' => 'rsyslog'})`
 
-##### `rotate`
+##### <a name="rotate"></a>`rotate`
 
 Data type: `Optional[Integer[0]]`
 
 The number of old log files to keep.
 If undefined it defaults to the setting in logrotate
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `size`
+##### <a name="size"></a>`size`
 
 Data type: `Optional[Logrotate::Size]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `sharedscripts`
+##### <a name="sharedscripts"></a>`sharedscripts`
 
 Data type: `Boolean`
 
 
 
-Default value: `true`
+Default value: ``true``
 
-##### `shred`
+##### <a name="shred"></a>`shred`
 
 Data type: `Optional[Boolean]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `shredcycles`
+##### <a name="shredcycles"></a>`shredcycles`
 
 Data type: `Optional[Integer[0]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `start`
+##### <a name="start"></a>`start`
 
 Data type: `Integer[0]`
 
 
 
-Default value: 1
+Default value: `1`
 
-##### `su`
+##### <a name="su"></a>`su`
 
 Data type: `Boolean`
 
 Rotate logs as a different user and group. $su_user and $su_group are
 required if this is set to true. Ignored on EL6.
 
-Default value: `false`
+Default value: ``false``
 
-##### `su_user`
-
-Data type: `Optional[String[1]]`
-
-
-
-Default value: `undef`
-
-##### `su_group`
+##### <a name="su_user"></a>`su_user`
 
 Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `tabooext`
+##### <a name="su_group"></a>`su_group`
+
+Data type: `Optional[String[1]]`
+
+
+
+Default value: ``undef``
+
+##### <a name="tabooext"></a>`tabooext`
 
 Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ## Data types
 
-### Logrotate::Periods
+### <a name="logrotateperiods"></a>`Logrotate::Periods`
 
 Allowed time intervals for logrotate
 
-Alias of `Enum['hourly', 'daily', 'weekly', 'monthly', 'yearly']`
+Alias of
 
-### Logrotate::Size
+```puppet
+Enum['hourly', 'daily', 'weekly', 'monthly', 'yearly']
+```
+
+### <a name="logrotatesize"></a>`Logrotate::Size`
 
 Size of a log in bytes, kilobytes, megabytes or gigabytes
 
-Alias of `Variant[Integer[1], Pattern[/^[0-9]+[kMG]?$/]]`
+Alias of
+
+```puppet
+Variant[Integer[1], Pattern[/^[0-9]+[kMG]?$/]]
+```
 
