@@ -25,7 +25,7 @@ describe 'logrotate::rule' do
         }}
         it { is_expected.to compile.with_all_deps }
         it { is_expected.to create_file('/etc/logrotate.simp.d/test_logrotate_title').with_content(/test1\.log.*test2\.log/) }
-        if (facts[:operatingsystemmajrelease].to_s >= '7')
+        if ((facts[:operatingsystem] == 'Amazon') && (facts[:operatingsystemmajrelease] < '3')) || (facts[:operatingsystemmajrelease].to_s >= '7')
           it { is_expected.to create_file('/etc/logrotate.simp.d/test_logrotate_title').with_content(/lastaction\n\s+\/usr\/bin\/systemctl restart rsyslog/m) }
         else
           it { is_expected.to create_file('/etc/logrotate.simp.d/test_logrotate_title').with_content(/lastaction\n\s+\/sbin\/service rsyslog restart/m) }
@@ -38,7 +38,7 @@ describe 'logrotate::rule' do
           :lastaction_restart_logger => true
         }}
         let(:hieradata) { 'alternate_logger' }
-        if (facts[:operatingsystemmajrelease].to_s >= '7')
+        if ((facts[:operatingsystem] == 'Amazon') && (facts[:operatingsystemmajrelease] < '3')) || (facts[:operatingsystemmajrelease].to_s >= '7')
           it { is_expected.to create_file('/etc/logrotate.simp.d/test_logrotate_title').with_content(/lastaction\n\s+\/usr\/bin\/systemctl restart syslog/m) }
         else
           it { is_expected.to create_file('/etc/logrotate.simp.d/test_logrotate_title').with_content(/lastaction\n\s+\/sbin\/service syslog restart/m) }
